# Azul_Engine

./: .gitignore  Cargo.toml  README.md  Rules.txt  index.html  index.js
release_models/: azul_alpha.ot
src/: lib.rs  main.rs
src/ai/: heuristic_ai.rs  human_agent.rs  mcts_ai.rs  mcts_heuristic_ai.rs  mcts_lib.rs  mcts_nn_ai.rs  mod.rs  nn.rs  simple_ai.rs
training_models/: azul_model_v1.ot  azul_model_v2.ot
