[package]
name = "azul-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4" 
rayon = "1.10.0"

# This section adds special features ONLY when compiling for a WebAssembly target
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
